--- a/index.css
+++ b/index.css
@@ -80,8 +80,8 @@ hr {
     justify-content: flex-start;
     flex-wrap: wrap;
     margin: 0px;
-    border-style: solid;
-    color: black;
+    /* border-style: solid;
+    color: black; */
 }
 
 h4{
@@ -147,8 +147,8 @@ p {
     justify-content: flex-start;
     flex-wrap: wrap;
     margin: 0px;
-    border-style: solid;
-    color: black;
+    /* border-style: solid;
+    color: black; */
     padding: 1rem;
 }
 
@@ -177,7 +177,8 @@ p {
 }
 
 .card-image img{
-    width: 49rem;
+    width: 50rem;
+    overflow: hidden;
 }
 
 .card-image i{
@@ -199,9 +200,10 @@ p {
     margin-top: 0;
 }
 .card-description p{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-bottom: 2.5rem;
+    padding-top: 1rem;
 }
 
 .card hr{
@@ -236,6 +238,11 @@ p {
     font-size: 5rem;
 }
 
+.card-icon i:hover{
+    color: #E12D1D;
+    transition: all 0.5s ease;
+}
+
 .project-buttons{
     margin: 2.5rem;
     width: 100%;
@@ -249,14 +256,86 @@ p {
     padding: 2rem;
     width: 15rem;
     text-align: center;
+    margin-bottom: 5rem;
 }
 
 .project-button h5{
     font-size: 2.5rem;
 }
+
+.skill-content{
+    padding-left: 5rem;
+    padding-right: 5rem;
+    padding-top: 5rem;
+    margin-bottom: 20rem;
+    margin-top: 5rem;
+}
+
+.skill-container{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 1rem;
+    background-color: #2B4764 ;
+    border-radius: 20px;
+}
+
+.skill-icon {
+    padding: 2rem;
+    margin-bottom: 1rem;
+}
+
+.skill-icon i{
+    color: #fff;
+    font-size: 15rem;
+}
+
+.skill-icon i:hover{
+    color: #E12D1D;
+    transition: all 0.5s ease;
+}
+
+.contact-content{
+    padding: 2rem;
+    background-color: black;
+}
+
+.contact-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 0rem;
+}
+
+
+.contact-icons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.contact-icon {
+    padding: 1.5rem;
+    margin-bottom: 0rem;
+}
+
+.contact-icon i{
+    color: #545454;
+    font-size: 7rem;
+}
+
+.contact-icon i:hover{
+    color: #E12D1D;
+    transition: all 0.5s ease;
+}
+
+
 /* .navbar{
     display: none;
 } */
+
 
 @media screen and (min-width: 768px) {
 
