--- a/nav.css
+++ b/nav.css
@@ -89,3 +89,40 @@ li{
     flex-direction: column;
     justify-items: flex-start;
 }
+
+
+@media only screen and (min-width: 768px) {
+
+    .navbar {
+    height: 4.5rem;
+    z-index: 1;
+    box-shadow: 0px 2px 12px 2px rgba(0,0,0,0.73);
+    }
+
+    .logo {
+        font-size: 2rem;
+    }
+
+    .navbar-toggle {
+        font-size: 2.5rem;
+    }
+
+    .mobile-menu {
+        top: 4.5rem;
+        width: 20rem;
+    }
+
+    .main-menu {
+        box-shadow: 0px 2px 12px 2px rgba(0,0,0,0.73);
+        background-color: black;
+    }
+
+    .main-menu li {
+        font-size: 1.2rem;
+        padding: .3rem;
+    }
+    .main-menu ul {
+        padding: .2rem;
+    }
+
+}
