--- a/modal.css
+++ b/modal.css
@@ -70,3 +70,10 @@
         display: none;
     }
 }
+
+@media only screen and (max-width: 1000px) and (min-width: 500px) {
+
+    .modal-content{
+        width: 50%;
+    }
+}
