--- a/arrow.css
+++ b/arrow.css
@@ -10,8 +10,13 @@
 
 .arrow:hover{
     transition: all 0.5s ease;
-    font-size: 5rem;
+    font-size: 3rem;
 }
+
+.down-arrow{
+    margin-bottom: 2rem;
+}
+
 
 .bounce-in-top{-webkit-animation:bounce-in-top 1.1s both;animation:bounce-in-top 1.1s both}
 
