--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ section {
 }
 
 .type-container p{
-    font-size: 1.5rem;
+    font-size: 2.2rem;
 }
 
 h2 {
@@ -160,7 +160,7 @@ p {
 .card{
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0px 0px 22px 3px rgba(0,0,0,0.41);;
+    box-shadow: 0px 0px 22px 3px rgba(0,0,0,0.41);
 }
 
 .card-title{
@@ -185,6 +185,7 @@ p {
 
 .card-image img{
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
