--- a/index.css
+++ b/index.css
@@ -484,6 +484,10 @@ p {
         font-size: 8rem;
         margin: 1rem;
     }
+
+    .projects .projects-divider{
+        width: 10%;
+    }
     
 
 
@@ -495,6 +499,11 @@ p {
         font-size: 2.5rem;
 
     }
+
+    .projects .projects-divider{
+        width: 10%;
+    }
+    
 
 
     .image-box{
