--- a/arrow.css
+++ b/arrow.css
@@ -81,6 +81,10 @@
         font-size: 5rem;
     }
 
+    .down-arrow{
+        margin-bottom: .3rem;
+    }
+
 }
 
 @media only screen and (max-width: 1000px) and (min-width: 500px) {
@@ -100,6 +104,11 @@
     .right-fifth{
         margin-left: 10rem;
     }
+
+    .down-arrow{
+        margin-bottom: .3rem;
+    }
+
     
 
 }
