--- a/contact.css
+++ b/contact.css
@@ -28,8 +28,12 @@
 .contact-form-container{
     width:100%;
     background-color: #545454;
-    padding: 1rem;
+    padding: 1.5rem;
     border-radius: 5px;
+}
+.contact-form-container h3{
+    margin-bottom: 1rem;
+    margin-top: 0;
 }
 
 .contact-form{
@@ -43,7 +47,10 @@
     font-family: 'Courier New', Courier, monospace;
     border-radius: 2px;
     border-style: hidden;
-    padding: .5rem;
+    padding-top: .5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    padding-bottom: .5rem;
 }
 
 
@@ -54,7 +61,7 @@
     padding-left: .5rem;
     padding-top: .5rem;
     padding-right: .5rem;
-    padding-bottom: 3rem;
+    padding-bottom: 4rem;
     color: black;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -78,4 +85,84 @@
     padding-right: 1.5rem;
     padding-left: 1rem;
     border-radius: 2px;
+}
+
+
+@media only screen and (min-width: 1425px){
+    .contact-form-container{
+            max-width: 40%;
+            margin: 1rem;
+        }
+        .contact-container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .contact-background {
+        background-position-y: -15rem;
+
+    }
+
+}
+
+@media only screen and (max-width: 1424px) and (min-width: 1091px) {
+
+        .contact-form-container{
+            max-width: 40%;
+            margin: 1rem;
+        }
+
+        .contact-container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .contact-background {
+        background-image: url(contact-background.png);
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        background-size: 100%;
+        background-position-y: -10rem;
+
+    }
+
+    
+
+
+
+}
+
+@media only screen and (max-width: 1090px) and (min-width: 500px) {
+
+        .contact-form-container{
+            max-width: 40%;
+            margin: 1rem;
+        }
+
+        .contact-container{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .contact-background{
+        background-position-y: -1rem;
+    }
+
+
+
+}
+
+@media only screen and (max-width: 700px){
+     .contact-background {
+         background-position-y: 20rem;
+     }
 }
