--- a/modal.css
+++ b/modal.css
@@ -22,6 +22,23 @@
     border-radius: 10px;
 }
 
+.modal-text{
+    text-align: center;
+}
+
+.modal-text h4{
+    color: #00A379;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
+
+.check i{
+    color: #00A379;
+    margin-top: 2rem;
+    font-size: 8rem;
+}
+
 /* The Close Button */
 .close {
     color: #aaa;
