--- a/contact.css
+++ b/contact.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: 100%;
+    background-position-y: -2rem;
 }
 
 
@@ -85,6 +86,10 @@
     padding-right: 1.5rem;
     padding-left: 1rem;
     border-radius: 2px;
+}
+
+.contact hr{
+    width: 20%;
 }
 
 
