--- a/contact.css
+++ b/contact.css
@@ -34,6 +34,7 @@
 .contact-form-container h3{
     margin-bottom: 1rem;
     margin-top: 0;
+    font-size: 1.5rem;
 }
 
 .contact-form{
@@ -51,6 +52,7 @@
     padding-left: .5rem;
     padding-right: .5rem;
     padding-bottom: .5rem;
+    font-size: 1.2rem;
 }
 
 
@@ -64,6 +66,7 @@
     padding-bottom: 4rem;
     color: black;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 1.2rem;
 }
 
 .contact-button{
@@ -74,7 +77,8 @@
 
 .contact-button i{
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    
 }
 
 .contact-form button{
@@ -85,7 +89,7 @@
     border-style: hidden;
     padding-top: .5rem;
     padding-bottom: .5rem;
-    padding-right: 1rem;
+    padding-right: 1.3rem;
     padding-left: 1rem;
     border-radius: 2px;
 }
@@ -97,7 +101,7 @@
 
 @media only screen and (min-width: 1425px){
     .contact-form-container{
-            max-width: 35%;
+            max-width: 30rem;
             margin: 1rem;
         }
     .contact-container{
@@ -132,7 +136,12 @@
     }
 
     .contact hr {
-        width: 7%;
+        width: 7rem;
+    }
+
+    .contact-content {
+        padding-top: 4rem;
+        
     }
 
 }
@@ -162,6 +171,24 @@
         width: 7%;
     }
 
+    .contact-form input {
+        font-size: 1rem;
+    }
+
+    .contact-form textarea {
+        font-size: 1rem;
+    }
+
+    .contact-form-container h3 {
+        font-size: 2rem;
+    }
+
+    .contact-button i {
+        color: #fff;
+        font-size: 2rem;
+        padding-right: .2rem;
+    }
+
 
 
 }
@@ -169,7 +196,7 @@
 @media only screen and (max-width: 1090px) and (min-width: 500px) {
 
         .contact-form-container{
-            max-width: 40%;
+            max-width: 45%;
             margin: 1rem;
         }
 
@@ -188,6 +215,24 @@
 
     .contact hr {
         width: 7%;
+    }
+
+    .contact-form input {
+        font-size: 1rem;
+    }
+
+    .contact-form textarea {
+        font-size: 1rem;
+    }
+
+    .contact-form-container h3 {
+        font-size: 2rem;
+    }
+
+    .contact-button i {
+        color: #fff;
+        font-size: 2rem;
+        padding-right: .2rem;
     }
 
 }
